# soccer-bg-commentary

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: overall-system.md
outputs/: evaluation-target-a.jsonl  evaluation-target-b.jsonl  evaluation-target-bdash.jsonl  evaluation-target-c.jsonl  evaluation-target.jsonl
outputs/demo-step1/: readme.md
outputs/demo-step2/: 13-ref.jsonl  13-ref.vtt  13.jsonl  13.vtt  15-ref.jsonl  15-ref.srt  15.jsonl  15.srt  22-ref.jsonl  22-ref.vtt  22.vtt  commentary.jsonl  readme.md
outputs/demo-step3/: readme.md
outputs/demo-step4/: readme.md
outputs/step2/: evaluation-target-correct-player-list-w-action.jsonl  evaluation-target-correct-player-list.jsonl  evaluation-target-sn-gamestate-w-action.jsonl  (+1 more)
scripts/: 2024-09-17-11-31-addinfo_retrieval.sh  2024-09-18-15-12-addinfo_retrieval.sh  2024-10-03-21-40-addinfo_retrieval.sh  2024-10-26-10-48-construct_query_comments.sh  2024-10-26-14-48-addinfo_retrieval.sh  2024-10-26-14-48-construct_query_comments.sh  2024-11-09-14-48-construct_query_comments.sh  2024-11-10-10-48-construct_query_comments.sh  2024-11-10-14-48-addinfo_retrieval.sh  2024-11-29-14-48-gen.sh  addinfo_retrieval.sh  construct_query_comments.sh  final-demo-one-game-30-sec.sh  mthesis-actioin-spotting.sh  mthesis-step2-create-eval-targets.sh  nlp2025-eval-gen.sh  nlp2025-step1-construct-query.sh  nlp2025-step2-create-eval-targets.sh  nlp2025-step3-gen-commentary.sh  nlp2025-step4-collect.sh  setup_data.sh  sn-gamestate-construct_query_comments.sh
scripts/demo/: add-sub.sh  (+10 more)
src/: main.py  retriver.py
(+212 files in other folders)
