[project]
name = "sn-providing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas>=2.2.2",
    "typed-argument-parser>=1.10.1",
    "ipykernel>=6.29.5",
    "ruff>=0.6.2",
    "gensim>=4.3.2",
    "nltk>=3.9.1",
    "loguru>=0.7.2",
    "llama-index>=0.10.45.post1",
    "openai>=1.42.0",
    "rake-nltk>=1.0.6",
    "langchain>=0.2.15",
    "langchain-community>=0.2.14",
    "langchain-chroma>=0.1.3",
    "langchain-openai>=0.1.23",
    "lark>=1.2.2",
    "cassio>=0.1.7",
    "langchain-huggingface>=0.0.3",
    "python-dotenv>=1.0.1",
    "faiss-cpu>=1.8.0.post1",
    "beautifulsoup4>=4.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
